--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 language: go
 
 go:
-- 1.11
+- 1.11.5
 
 sudo: false
 
+os:
+ - linux
+ - linux-ppc64le
+
+go_import_path: github.com/geofffranks/spruce
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "linux-ppc64le" ]]; then
+        wget https://github.com/golang/dep/releases/download/v0.5.0/dep-linux-ppc64le;
+        chmod u+x ./dep-linux-ppc64le;
+        cp ./dep-linux-ppc64le /home/travis/gopath/bin/godep;
+        cp dep-linux-ppc64le /usr/local/bin/godep;
+    fi
 script:
 - make
